Minor fix - Firefox doesn't like alignment-baseline.

--- a/geomap/css/literacy.css
+++ b/geomap/css/literacy.css
@@ -23,11 +23,6 @@ svg {
   background-color: #bef;
 }
 
-/* Styling for the chart legend */
-#legend text {
-  alignment-baseline: hanging;
-}
-
 /* Styling for the reader guide */
 #guide {
   position: absolute;
